# mininnverifier-test-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/testrunner/: __init__.py  __main__.py  list.py  output.py  reproduce.py  scoring.py  show.py
src/testrunner/benchmark/: __init__.py  runner.py
src/testrunner/check/: __init__.py  close_to_expected.py
src/testrunner/commands/: __init__.py  common.py  eval.py  grad.py  train.py
src/testrunner/datasets/: __init__.py  mnist.py
src/testrunner/fuzz/: __init__.py  graph_builder.py  runner.py
tests/: conftest.py  test_benchmark.py  test_check.py  test_commands.py  test_common.py  test_datasets.py  test_fuzz_runner.py  test_graph_builder.py  test_list.py  test_main.py  test_output.py  test_reproduce.py  test_scoring.py  test_show.py  test_train.py
